# AsyncFw

./: .clang-format  .gitignore  AddressInfo.cpp  AddressInfo.h  AsyncFw.doxyfile  AsyncFwConfig.cmake  CMakeLists.txt  Coroutine.cpp  Coroutine.h  Cryptor.cpp  Cryptor.h  DataArrayAbstractTcp.cpp  DataArrayAbstractTcp.h  DataArraySocket.cpp  DataArraySocket.h  DataArrayTcpClient.cpp  DataArrayTcpClient.h  DataArrayTcpServer.cpp  DataArrayTcpServer.h  File.cpp  File.h  HttpServer.cpp  HttpServer.h  HttpSocket.cpp  HttpSocket.h  LICENSE  ListenSocket.cpp  ListenSocket.h  Log.cpp  Log.h  LogTcpClient.cpp  LogTcpClient.h  LogTcpServer.cpp  LogTcpServer.h  MainThread.cpp  MainThread.h  MulticastDns.cpp  MulticastDns.h  PollNotifier.cpp  PollNotifier.h  (+23 more)
cmake/: version.cmake  version.script.cmake
core/: AbstractSocket.cpp  AbstractSocket.h  AbstractThread.cpp  AbstractThread.h  AbstractTlsSocket.cpp  AbstractTlsSocket.h  AnyData.cpp  AnyData.h  DataArray.cpp  DataArray.h  FunctionConnector.cpp  FunctionConnector.h  ListenSocket.cpp  ListenSocket.h  LogStream.cpp  LogStream.h  Socket.cpp  Socket.h  Thread.cpp  Thread.h  TlsContext.cpp  TlsContext.h  TlsSocket.cpp  TlsSocket.h  abstract_function.hpp  abstract_thread.hpp  console_msg.cpp  console_msg.hpp  function.hpp  invocable.hpp  log-types.cpp  log-types.hpp  main-thread.hpp
doc/: AsyncFw.doxyfile
doc/html/: AddressInfo_8h_source.html  AnyData_8h_source.html  DataArrayTcpServer_8h_source.html  File_8h_source.html  FunctionConnector_2main_8cpp-example.html  PollNotifier_8h_source.html  RrdClient_8h_source.html  Socket_8h_source.html  SystemProcess_8h_source.html  Task_8h_source.html  ThreadPool_8h_source.html  Thread_8h_source.html  Version_8h_source.html  annotated_dup.js  classAsyncFw_1_1AbstractFunctionConnector-members.html  classAsyncFw_1_1AbstractFunctionConnector.js  classAsyncFw_1_1AbstractFunctionConnector_1_1QueuedTask-members.html  classAsyncFw_1_1AbstractFunctionConnector_1_1QueuedTask.html  classAsyncFw_1_1AbstractInstance-members.html  classAsyncFw_1_1AbstractInstance.html  classAsyncFw_1_1AbstractInstance_1_1List-members.html  classAsyncFw_1_1AbstractLog-members.html  classAsyncFw_1_1AbstractLog.html  classAsyncFw_1_1AbstractTask-members.html  classAsyncFw_1_1AbstractThread.html  classAsyncFw_1_1AbstractThread.js  classAsyncFw_1_1AbstractThreadPool-members.html  classAsyncFw_1_1AbstractThreadPool.html  classAsyncFw_1_1AbstractThreadPool_1_1Thread-members.html  classAsyncFw_1_1AbstractThreadPool_1_1Thread.html  classAsyncFw_1_1AbstractThread_1_1AbstractPollTask-members.html  classAsyncFw_1_1AbstractThread_1_1AbstractTask-members.html  classAsyncFw_1_1AbstractThread_1_1AbstractTask.html  classAsyncFw_1_1AbstractThread_1_1Holder.html  classAsyncFw_1_1AbstractThread_1_1PollTask-members.html  classAsyncFw_1_1AbstractThread_1_1PollTask.html  classAsyncFw_1_1AbstractTlsSocket.html  classAsyncFw_1_1AddressInfo-members.html  classAsyncFw_1_1AddressInfo.js  classAsyncFw_1_1DataArrayAbstractTcp-members.html  (+91 more)
docs/: AbstractSocket_8h.html  AbstractSocket_8h.js  AbstractSocket_8h__dep__incl.map  AbstractSocket_8h__dep__incl.md5  AbstractSocket_8h__incl.map  AbstractSocket_8h__incl.md5  AbstractSocket_8h_source.html  AbstractThread_8h.html  AbstractThread_8h.js  AbstractThread_8h__dep__incl.map  AbstractThread_8h__dep__incl.md5  AbstractThread_8h__incl.map  AbstractThread_8h__incl.md5  AbstractThread_8h_source.html  AbstractTlsSocket_8h.html  AbstractTlsSocket_8h.js  AbstractTlsSocket_8h__dep__incl.map  AbstractTlsSocket_8h__dep__incl.md5  AbstractTlsSocket_8h__incl.map  AbstractTlsSocket_8h__incl.md5  AbstractTlsSocket_8h_source.html  AddressInfo_8h_source.html  AddressResolver_8h.html  AddressResolver_8h.js  AddressResolver_8h__incl.map  AddressResolver_8h__incl.md5  AddressResolver_8h_source.html  AnyData_8h.html  AnyData_8h.js  AnyData_8h__dep__incl.map  AnyData_8h__dep__incl.md5  AnyData_8h__incl.map  AnyData_8h__incl.md5  AnyData_8h_source.html  ApplicationNotifier_2main_8cpp-example.html  ApplicationNotifier_8h.html  ApplicationNotifier_8h.js  ApplicationNotifier_8h__incl.map  ApplicationNotifier_8h__incl.md5  ApplicationNotifier_8h_source.html  (+1141 more)
docs/html/: Cryptor_8h_source.html  DataArrayAbstractTcp_8h_source.html  DataArraySocket_8h_source.html  DataArray_8h_source.html  FileSystemWatcher_8h_source.html  (+68 more)
example/: snippet.dox
example/Coroutine/: CMakeLists.txt  main.cpp
example/CoroutineWait/: CMakeLists.txt  main.cpp
example/FunctionConnector/: CMakeLists.txt  main.cpp
example/HttpServer/: CMakeLists.txt  main.cpp
example/Invoke/: CMakeLists.txt  main.cpp
example/run-examples/: CMakeLists.txt  main.cpp
install_include/: AbstractTlsSocket  AddressInfo  Coroutine  Cryptor  DataArrayAbstractTcp  DataArraySocket  DataArrayTcpClient  DataArrayTcpServer  File  FileSystemWatcher  ListenSocket  LogStream  MainThread  MulticastDns  PollNotifier  RrdClient  RrdServer  Socket  SystemProcess  TlsContext  TlsSocket
linux/: FileSystemWatcher.cpp  FileSystemWatcher.h  SystemProcess.cpp  SystemProcess.h
main/: AddressInfo.cpp  AddressInfo.h  AddressResolver.cpp  AddressResolver.h  ApplicationNotifier.cpp  ApplicationNotifier.h  Coroutine.cpp  Coroutine.h  Cryptor.cpp  Cryptor.h  DataArrayAbstractTcp.cpp  DataArrayAbstractTcp.h  DataArraySocket.cpp  DataArraySocket.h  DataArrayTcpClient.cpp  DataArrayTcpClient.h  DataArrayTcpServer.cpp  DataArrayTcpServer.h  File.cpp  File.h  FileSystemWatcher.h  HttpServer.cpp  HttpServer.h  HttpSocket.cpp  HttpSocket.h  Instance.cpp  Instance.h  ListenSocket.cpp  ListenSocket.h  Log.cpp  Log.h  MainThread.h  MulticastDns.cpp  MulticastDns.h  PollNotifier.cpp  PollNotifier.h  Rrd.cpp  Rrd.h  RrdClient.cpp  RrdClient.h  (+15 more)
qt/: FileSystemWatcher.cpp  SystemProcess.cpp
src/: AddressInfo.cpp  Coroutine.h  Cryptor.cpp  Cryptor.h  DataArrayAbstractTcp.h  DataArraySocket.cpp  DataArraySocket.h  DataArrayTcpClient.cpp  DataArrayTcpClient.h  DataArrayTcpServer.cpp  File.h  Log.cpp  Log.h  LogTcpServer.h  PollNotifier.cpp  Rrd.cpp  Timer.h
windows/: FileSystemWatcher.cpp  SystemProcess.cpp
(+261 files in other folders)
